--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
 .profile {
   display: flex;
   right: 0;
-  left: 70vw;
+  left: 68vw;
   position: relative;
 }
 
@@ -121,7 +121,8 @@ body {
 
 .home video {
   position: fixed;
-  left: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
   top: -15vh;
   z-index: -5;
 }
@@ -130,7 +131,7 @@ body {
   color: white;
   font-size: 7vw;
   font-weight: 900;
-  width: 40vw;
+  width: 45vw;
   left: 2vw;
   position: relative;
 }
