--- a/src/app/Courses/globals.css
+++ b/src/app/Courses/globals.css
@@ -36,24 +36,46 @@
 }
 
 .right-form form {
-    /* justify-content: center; */
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .right-form form input {
     position: relative;
     left: 1vw;
-    width: 100%;
+    width: 80%;
     padding: 8px;
     margin-bottom: 10px;
     box-sizing: border-box;
+    border-bottom: solid black 1px;
 }
 
 
 
+.no-render {
+    margin: 2vw;
+    background-color: gray;
+    color: black;
+
+}
+
+
+.li-li-c h5 {
+    font-size: 2vw;
+    font-weight: 700;
+}
+
+.li-li-c h6 {
+    font-size: 1.5vw;
+    font-weight: 700;
+}
+
 button {
-    background-color: black;
+    background-color: red;
     color: white;
-    padding: 1vw 2vw;
     position: relative;
-    left: 1vw;
+    padding: 2px 10px;
+    /* left: 1vw; */
+    border-radius: 2vw;
 }
