--- a/src/app/Faculty/globals.css
+++ b/src/app/Faculty/globals.css
@@ -8,6 +8,7 @@
     /* left: 20%; */
     width: 49.8vw;
     position: relative;
+    min-height: 93vh;
 }
 
 .right-form {
@@ -26,22 +27,45 @@
 
 
 
+.no-render {
+    margin: 2vw;
+    background-color: gray;
+    color: black;
+    
+}
 
 
+.faculty-list div{
+    margin: 2vw;
 
-.course-list {
-    position: relative;
+}
+
+.faculty-list div h5 {
+    font-size: 2vw;
+    font-weight: 600;
+}
+
+.faculty-list div h6 {
+    font-size: 1.6vw;
+    font-weight: 600;
 }
 
 .li-li {
     display: flex;
 }
 
+.li-li button {
+    background-color: red;
+    padding: 1px 2px;
+    color: white;
+    border-radius: 2vw;
+}
+
 .circleAvatarF {
-    width: 20vw;
+    width: 10vw;
     border-radius: 50%;
     overflow: hidden;
     z-index: 5;
     position: relative;
-    left: 28vw;
+    left: 20vw;
   }
